{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 60,
  "lineage": "d606de7c-be2a-ea2c-0290-44972934bf70",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-12-12T00:11:12.449-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/lucid-sonar-406807/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/lucid-sonar-406807/global/networks/vpc-2",
            "priority": 1460,
            "project": "lucid-sonar-406807",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lucid-sonar-406807/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "https_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-12-12T00:11:12.397-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/lucid-sonar-406807/global/firewalls/allow-https",
            "log_config": [],
            "name": "allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/lucid-sonar-406807/global/networks/vpc-2",
            "priority": 1460,
            "project": "lucid-sonar-406807",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lucid-sonar-406807/global/firewalls/allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "icmp_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-12-12T00:11:12.365-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/lucid-sonar-406807/global/firewalls/vpc-2-allow-icmp",
            "log_config": [],
            "name": "vpc-2-allow-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/lucid-sonar-406807/global/networks/vpc-2",
            "priority": 1460,
            "project": "lucid-sonar-406807",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lucid-sonar-406807/global/firewalls/vpc-2-allow-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "sql_to_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3306"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-12-12T00:11:39.707-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/lucid-sonar-406807/global/firewalls/sql-to-subnet",
            "log_config": [],
            "name": "sql-to-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/lucid-sonar-406807/global/networks/vpc-2",
            "priority": 1460,
            "project": "lucid-sonar-406807",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lucid-sonar-406807/global/firewalls/sql-to-subnet",
            "source_ranges": [
              "10.0.1.0/24",
              "10.0.2.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "sql-instance"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-2",
            "google_compute_subnetwork.sub-1",
            "google_compute_subnetwork.sub-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-12-12T00:11:12.403-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/lucid-sonar-406807/global/firewalls/vpc-2-allow-ssh",
            "log_config": [],
            "name": "vpc-2-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/lucid-sonar-406807/global/networks/vpc-2",
            "priority": 1460,
            "project": "lucid-sonar-406807",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lucid-sonar-406807/global/firewalls/vpc-2-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "instance-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "instance-1",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20230831",
                    "size": 10,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/lucid-sonar-406807/zones/us-central1-a/disks/instance-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/lucid-sonar-406807/zones/us-central1-a/instances/instance-1",
            "instance_id": "5722269813050813266",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "PC8zFl0tZ9Y=",
            "name": "instance-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.28.44.66",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/lucid-sonar-406807/global/networks/vpc-2",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/lucid-sonar-406807/regions/us-central1/subnetworks/subnet-1",
                "subnetwork_project": "lucid-sonar-406807"
              }
            ],
            "project": "lucid-sonar-406807",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/lucid-sonar-406807/zones/us-central1-a/instances/instance-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "6smc4R4d39I=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc-2",
            "google_compute_subnetwork.sub-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/lucid-sonar-406807/global/networks/vpc-2",
            "mtu": 0,
            "name": "vpc-2",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "lucid-sonar-406807",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lucid-sonar-406807/global/networks/vpc-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-12-12T00:11:13.437-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/lucid-sonar-406807/regions/us-central1/subnetworks/subnet-1",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/lucid-sonar-406807/global/networks/vpc-2",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "lucid-sonar-406807",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lucid-sonar-406807/regions/us-central1/subnetworks/subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-12-12T00:11:13.294-08:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/lucid-sonar-406807/regions/asia-east2/subnetworks/subnet-2",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "subnet-2",
            "network": "https://www.googleapis.com/compute/v1/projects/lucid-sonar-406807/global/networks/vpc-2",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "lucid-sonar-406807",
            "purpose": "PRIVATE",
            "region": "asia-east2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lucid-sonar-406807/regions/asia-east2/subnetworks/subnet-2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc-2"
          ]
        }
      ]
    }
  ]
}